--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flask Blog</title>
-</head>
-<body>
-    <h1>Hello {{ name }} and Welcome!</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+    <h2 class="text-center p-5">Welcome to the Global Phone Book</h2>  
+{% endblock %}
