--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
 </head>
 <body>
-
-    {% include 'nav.html' %}
-
+    {% block navbar %}
+        {% include 'nav.html' %}
+    {% endblock %}
     <div class="row bg-info py-5">
         <div class="col text-center text-white ">
             {% block header %}
