--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,5 +3,5 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-    <h2 class="text-center p-5">Welcome to the Global Phone Book</h2>  
+    <h2 class="text-center p-5"></h2>  
 {% endblock %}
