--- a/app/templates/navbar2.html
+++ b/app/templates/navbar2.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark sticky-top" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Phone Directory</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLinks" aria-controls="collapseLinks" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,8 +7,7 @@
         <div class="collapse navbar-collapse" id="collapseLinks">
         <div class="navbar-nav">
             <a class="nav-link" href="/">Home</a>
-            <a class="nav-link" href="/login">Log In</a>
-            <a class="nav-link" href="/signup">Sign Up</a>
+            <a class="nav-link" href="/add-phone">Add Phone Number</a>
         </div>
         </div>
     </div>
