--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,53 +1,48 @@
 {% extends 'base.html' %}
 
-{% block title %}Sign Up{% endblock %}
+{% block title %} Sign Up {% endblock %}
 
-{% block header %} 
+{% block header %}
     <h1>Sign Up</h1>
 {% endblock %}
 
 {% block content %}
-    <div class="d-flex justify-content-center">
-        <div class="card mt-5 mb-5" style="width: 30rem;">
-            <div class="card-body">
-                <form>
-                    <div class="mb-3 mt-4 px-3">
-                        <label for="first_name" class="form-label">First Name</label>
-                        <input type="text" class="form-control" name="first_name" placeholder="Enter First Name">
-                    </div>
-                    <div class="mb-3 px-3">
-                        <label for="last_name" class="form-label">Last Name</label>
-                        <input type="text" class="form-control" name="last_name" placeholder="Enter Last Name">
-                    </div>
-                    <div class="mb-3 px-3">
-                        <label for="email" class="form-label">Email Address</label>
-                        <input type="email" class="form-control" name="email" placeholder="Enter Email Address">
-                    </div>
-                    <div class="mb-3 px-3">
-                        <label for="address" class="form-label">Address</label>
-                        <input type="text" class="form-control" name="address" placeholder="Enter Address">
-                    </div>
-                    <div class="mb-3 px-3">
-                        <label for="phone_number" class="form-label">Phone Number</label>
-                        <input type="text" class="form-control" name="phone_number" placeholder="Enter Phone Number">
-                    </div>
-                    <div class="mb-3 px-3">
-                        <label for="username" class="form-label">Username</label>
-                        <input type="text" class="form-control" name="username" placeholder="Enter Username">
-                    </div>
-                    <div class="mb-3 px-3">
-                        <label for="password" class="form-label">Password</label>
-                        <input type="password" class="form-control" name="password" placeholder="Enter Password">
-                    </div>
-                    <div class="mb-4 px-3">
-                        <label for="confirm_pass" class="form-label">Confirm Password</label>
-                        <input type="password" class="form-control" name="confirm_pass" placeholder="Confirm Password">
-                    </div>
-                    <div class="mx-3 mb-3">
-                        <button type="submit" class="btn btn-secondary mt-3 w-100 fw-medium">Submit</button>
-                    </div>
-                </form>
-            </div>   
-        </div>        
-    </div> 
+    <div class="row">
+        <div class="d-flex justify-content-center">
+            <div class="card my-5" style="width: 30rem">
+                <div class="card-body mx-4 my-5">
+                    <form action="" method="post">
+                        {{ form.csrf_token }}
+                        <div class="my-3">
+                        {{ form.first_name.label }}
+                        {{ form.first_name(class="form-control", placeholder="Enter First Name") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.last_name.label }}
+                        {{ form.last_name(class="form-control", placeholder="Enter Last Name") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.email.label }}
+                        {{ form.email(class="form-control", placeholder="Enter Email") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.username.label }}
+                        {{ form.username(class="form-control", placeholder="Enter Username") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.password.label }}
+                        {{ form.password(class="form-control", placeholder="Enter Password") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.confirm_pass.label }}
+                        {{ form.confirm_pass(class="form-control", placeholder="Confirm Your Password") }}
+                        </div>
+                        <div class="mt-3">
+                        {{ form.submit(class="btn btn-primary w-100 mt-3") }}
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
