--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,4 +1,12 @@
 {% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
 {% block navbar %}
     {% include 'navbar2.html' %}
 {% endblock %}  
+
+
+{% block content %}
+    <h2 class="text-center p-5"></h2>  
+{% endblock %}
