--- a/app/templates/add_phone.html
+++ b/app/templates/add_phone.html
@@ -1,3 +1,42 @@
 {% extends 'base.html' %}
 
 {% block title %}Add Phone Number{% endblock %}
+
+{% block navbar %}
+    {% include 'navbar2.html' %}
+{% endblock %}  
+
+{% block header %}
+    <h1>Add New Phone Number and Address</h1>
+{% endblock %}
+
+{% block content %}
+    <div class="row">
+        <div class="d-flex justify-content-center">
+            <div class="card mt-5" style="width: 30rem">
+                <div class="card-body mx-4 my-3">
+                    <form action="" method="post">
+                        {{ form.csrf_token }}
+                        <div class="my-3">
+                        {{ form.first_name.label }}*
+                        {{ form.first_name(class='form-control', placeholder="Enter Contact's First Name") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.last_name.label }}*
+                        {{ form.last_name(class='form-control', placeholder="Enter Contact's Last Name") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.address.label }}
+                        {{ form.address(class='form-control', placeholder="Enter Contact's Address") }}
+                        </div>
+                        <div class="my-3">
+                        {{ form.phone_number.label }}*
+                        {{ form.phone_number(class='form-control', placeholder="Enter Contact's Phone Number") }}
+                        </div>
+                        {{ form.submit(class='btn btn-primary w-100 mt-3') }}
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
