--- a/app/templates/navbar2.html
+++ b/app/templates/navbar2.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Phone Directory</a>
+        <a class="navbar-brand" href="/home">Phone Directory</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLinks" aria-controls="collapseLinks" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="collapseLinks">
         <div class="navbar-nav">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/home">Home</a>
             <a class="nav-link" href="/add-phone">Add Phone Number</a>
         </div>
         </div>
