Handle log in and log out functionality

--- a/app/templates/add_phone.html
+++ b/app/templates/add_phone.html
@@ -3,7 +3,7 @@
 {% block title %}Add Phone Number{% endblock %}
 
 {% block navbar %}
-    {% include 'navbar2.html' %}
+    {% include 'nav.html' %}
 {% endblock %}  
 
 {% block header %}
