--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -6,8 +6,15 @@
         </button>
         <div class="collapse navbar-collapse" id="collapseLinks">
         <div class="navbar-nav">
-            <a class="nav-link" href="/login">Log In</a>
+            
+            {% if current_user.is_authenticated %}
+            <a class="nav-link" href="/home">Home</a>
+            <a class="nav-link" href="/add-phone">Add Phone Number</a>
+            <a class="nav-link" href="/logout">Log Out</a>
+            {% else %}
             <a class="nav-link" href="/signup">Sign Up</a>
+            <a class="nav-link" href="/login">Log In</a>
+            {% endif %}
         </div>
         </div>
     </div>
