--- a/app/templates/add_phone.html
+++ b/app/templates/add_phone.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Phone Number{% endblock %}
+{% block title %}Instabook | Add Contact{% endblock %}
 
 {% block navbar %}
     {% include 'nav.html' %}
 {% endblock %}  
 
 {% block header %}
-    <h1>Add New Phone Number and Address</h1>
+    <h1>Add Contact</h1>
 {% endblock %}
 
 {% block content %}
