--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -26,40 +26,55 @@
                       <h3 class="card-title text-center mt-3 fs-1">Contacts</h3>
                       <p class="card-text text-center"> <i>Your Contacts Listed Below<i></p>
                     </div> 
+                   </div>
             </div>
         </div>
     </div>
 </div>
        
 <div class="mt-5 mb-3">
-  {% if current_user.is_anonymous == False %}
     <h5 class="fs-3">Welcome, {{ current_user.email }} </h5>
 </div>
-    {% if contacts != [] %}
+
+
       {% for contact in contacts %}
+        <div>
           <div class="card mb-4 ps-5" style="width:50rem">
             <div class="card-body">
               <p><h4 class="card-title">{{ contact.first_name }} {{ contact.last_name }}</h4></p>
-              <p><h6 class="card-subtitle">mobile: {{ contact.address }}</h6></p>
-              <p><h6 class="card-subtitle">work: {{ contact.phone_number }}</h6></p>
-              <a href="{{ url_for('view_single_contact', contact_id=contact.id) }}"><p style="font-size:small; color:darkcyan"><em>Edit Contact</em></p></a>
+              <p><h6 class="card-subtitle">address: {{ contact.address }}</h6></p>
+              <p><h6 class="card-subtitle">address: {{ contact.phone_number }}</h6></p>
+              {% if contact.email == current_user %}
+              <a href="{{ url_for('view_single_contact', contact_id=contact.id) }}" class="btn btn-success">Edit</a>
+                      <!-- Button trigger modal -->
+                      <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal-{{ contact.id }}">
+                        Delete
+                    </button>
+              {% endif %}
             </div>
           </div>
-      {% endfor %}
-    {% else %}
-        <div>
-          <h4>Let's create some contacts!</h4>
-          <br>
-          <a class="btn btn-success mt-3" href="{{ url_for('add_contact') }}" role="button">Add Contact</a>
-        </div>
-    {% endif %}
 
-  {% else %}
-    <div>
-      <h4>Please log in to view your contacts</h4>
-      <br>
-      <a class="btn btn-secondary mt-3" href="{{ url_for('login') }}" role="button">Log in</a>
-    </div>
-    
-  {% endif %}
+
+                
+                <!-- Modal -->
+                <div class="modal fade" id="deleteContactModal-{{ contact.id }}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="exampleModalLabel">Delete {{ contact.first_name }}?</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                        Are you sure you want to delete {{ contact.first_name }}? This action cannot be undone.
+                        </div>
+                        <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+
 {% endblock %}
